@@ -4762,3 +4762,5 @@ Changelog for GXemul:
 		Changing from 64 to 128 MB ram for the O2; this matches what
 		my real O2 has, and it is now detected correctly both by OSes
 		and the PROM.
+		Implementing the O2's GBE cursor; both bitmap and crosshair modes
+		work exactly like on the real machine now.
